# heart-rate-ring-buffer

./: .gitignore  LICENSE  Makefile  README  README.md
.github/workflows/: cmake.yml
src/: heart_rate_gen.c  heart_rate_gen.h  main.c  ring_buffer.c  ring_buffer.h
test/: CMakeLists.txt  heart_rate_gen_test.cpp  ring_buffer_test.cpp
